--- a/denemeGithup/Views/Home/About.cshtml
+++ b/denemeGithup/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<span>Deneme Eren Çapoar</span><br />
+<span>Deneme Eren Çapoar</span><br />
+<span>Deneme Eren Çapoar</span><br />
+<span>Deneme Eren Çapoar</span><br />
+<span>Deneme Eren Çapoar</span><brrr></brrr>
